# SqueLib

./: .gitignore  CMakeLists.txt  FromLinux_BuildAll.sh  README.md  Readme.md  SqueLib.toolchain  index.md.html
Temp_Engine/: BUILD_ANDROID.sh  BUILD_ANDROID_DEBUG.sh  BUILD_LINUX_UBUNTU_DEBUG.sh  BUILD_LINUX_UBUNTU_RELEASE.sh  CMakeLists.txt  FromWin_BuildAll.bat  gdb_android.sh
Temp_Engine/Android Specific/makecapk/: AndroidManifest.xml  resources.arsc
Temp_Engine/AndroidSpecific/: AndroidManifest.xml  AndroidManifest.xml.template
Temp_Engine/EngineAssets/: whatever.txt
Temp_Engine/EngineCode/: main.cpp  test.cpp  test.h
Temp_Engine/EngineCode/android/: AndroidGlue.cpp
Temp_Engine/EngineCode/android/application/: Application.h
Temp_Engine/EngineCode/application/: Application.cpp  Application.h
Temp_Engine/EngineCode/extra/vkguide/: cvars.cpp  cvars.h
Temp_Engine/EngineCode/helpers/: Globals.h  LWTimer.cpp  LWTimer.h  LogHandler.cpp  LogHandler.h  SimpleProfiler.cpp  SimpleProfiler.h  SimpleTasker.cpp  SimpleTasker.h
Temp_Engine/EngineCode/modules/: Module.h  ModuleTime.cpp  ModuleTime.h
Temp_Engine/FlyLib/: BuildAll.sh  CMakeLists.txt  FlyLib.cmake  FromLinux_BuildAll.sh  FromLinux_BuildAndroid.sh  FromWin_BuildAll.bat
Temp_Engine/FlyLib/cmake_modules/: FindAndroidSDKVars.cmake  SetupAndroidEnv.cmake
Temp_Engine/FlyLib/cmake_modules/FromLinux/: LinuxToAndroid.cmake  LinuxToLinux.cmake
Temp_Engine/FlyLib/cmake_modules/FromWin/: WinToWin.cmake
Temp_Engine/FlyLib/flylib_src/: fly_core.cpp  fly_display.cpp  fly_display.h  fly_filesystem.cpp  fly_input.cpp  fly_lib.h  fly_logger.cpp  fly_logger.h  fly_remap_macros.h  fly_render.cpp  fly_render_types.cpp  fly_shaders.cpp  fly_simple_types.h  fly_timer.cpp  fly_timer.h  fly_window.cpp
Temp_Engine/cmake_modules/: ACmake.cmake  Android.cmake  AndroidInstallTargets.cmake  FindAndroidSDKVars.cmake  Helpers.cmake  Linux.cmake  SetupAndroidEnv.cmake  Windows.cmake
Temp_Engine/cmake_modules/FromLinux/: LinuxToAndroid.cmake  LinuxToLinux.cmake
Temp_Engine/cmake_modules/FromWin/: WinToWin.cmake
cmake_modules/: AndroidInstallTargets.cmake  FindAndroidSDKVars.cmake  SetupAndroidEnv.cmake  SqueLib_Package.cmake  SqueLib_Toolchain.cmake
defaults/AndroidSpecific/: AndroidManifest.xml.template
docs/: doc_index.md.html  index.html
docs/Examples/: SquePong.md.html
docs/SqueLib-Thesis/: SqueLib_Bachelor_Thesis_Marc_Torres_Jimenez.md.html  holding.txt
docs/SqueLib-Thesis/markdeep-thesis/: markdeep-thesis.js  style.css
docs/Subsystems/: Core.md.html
docs/Tools/: Building.md.html
docs/libs/: markdeep.min.js  markdeep_slate.css
examples/ImGui_impl_SqueLib/: CMakeLists.txt  FromLinux_BuildAll_Debug.sh
examples/ImGui_impl_SqueLib/source/: main.cpp
examples/InputExample/: CMakeLists.txt  FromLinux_BuildAll.sh
examples/InputExample/code/: main.cpp
examples/LearnOpenGL_SqueLib/: CMakeLists.txt  FromLinux_BuildAll_Debug.sh  FromWin_BuildAll.bat
examples/LearnOpenGL_SqueLib/EngineAssets/shaders/: frag_s2_1.frag  frag_s3.frag  frag_s3_1.frag  frag_s4.frag  vert_s2_1.vert  vert_s4.vert  vert_s5.vert  vert_s8_affine.vert
examples/LearnOpenGL_SqueLib/source/: main.cpp
examples/LiveExample/: CMakeLists.txt  build_linux_android.sh  main.cpp
examples/SqueArkanoid/: BuildWindows.bat  CMakeLists.txt  FromLinux_BuildAll_Debug.sh
examples/SqueArkanoid/Assets/: frag_shader.sq_frag  vert_shader.sq_vert
examples/SqueArkanoid/code/: main.cpp
examples/SqueArkanoid/code/entities/: entity.cpp  entity.h
examples/SqueArkanoid/code/entities/types/: ball.cpp  ball.h  bg_block.h  block.cpp  block.h  include_all.h  killzone.cpp  killzone.h  player.cpp  player.h
examples/SqueArkanoid/code/render/: render.cpp  render.h
examples/SqueArkanoid/code/ui/: ui.cpp  ui.h
examples/SqueArkanoid/code/ui/scene0_select/: scene0.cpp  scene0.h
examples/SqueArkanoid/code/ui/scene1_play/: scene1.cpp  scene1.h
examples/SqueLifeApp/: CMakeLists.txt  FromLinux_BuildAll_Debug.sh  FromWin_BuildAll.bat
examples/SqueLifeApp/code/: main.cpp
examples/all/: CMakeLists.txt
examples/all/AndroidSpecific/: AndroidManifest.xml.template
examples/all/source/: main.cpp
examples/performance_tests/: CMakeLists.txt  main.cpp
examples/performance_tests/tests/: template_class_vs_data_structs.h  test_sorts.h  test_sque_basics.h  test_sque_vec.h
examples/pong/: CMakeLists.txt  FromLinux_BuildAll_Debug.sh  FromWin_BuildAll.bat  main.cpp
examples/pong/code/: collision.h  main.cpp  objects.h  render.h
extra/imgui_squelib/: imgui_impl_squelib.cpp  imgui_impl_squelib.h  imgui_squelib - Shortcut.lnk
flylib_src/: fly_core.cpp  fly_display.cpp  fly_filesystem.cpp  fly_lib.h  fly_render_types.cpp  fly_shaders.cpp  fly_simple_types.h  fly_timer.cpp
squelib_src/: sque_data_structures.h  sque_display.cpp  sque_filesystem.cpp  sque_input.cpp  sque_load_asset.cpp  sque_logger.cpp  sque_remap_macros.h  sque_render.cpp  sque_render_types.cpp  sque_shaders.cpp  sque_simple_types.h  sque_sort.h  sque_stream.h  sque_timer.cpp  sque_vector.h  squelib.cpp  squelib.h
toolchains/: SqueLib.toolchain
